<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2018 Google Inc. All rights reserved.
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
       http://www.apache.org/licenses/LICENSE-2.0
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccessPointRangingResultsActivity">

    <TextView
        android:id="@+id/ssid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_access_point_ranging_request_margin_start"
        android:layout_marginTop="@dimen/activity_access_point_ranging_request_margin_top_title"
        android:gravity="center_vertical"
        tools:text="SSID"
        android:textAlignment="center"
        android:textSize="@dimen/activity_access_point_ranging_request_header_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bssid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_access_point_ranging_request_margin_end"
        android:layout_marginTop="@dimen/activity_access_point_ranging_request_margin_top_title"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:textSize="@dimen/activity_access_point_ranging_request_header_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="BSSID" />

    <View
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="@dimen/activity_access_point_ranging_request_divider_height"
        android:layout_marginEnd="@dimen/activity_access_point_ranging_request_margin_end"
        android:layout_marginStart="@dimen/activity_access_point_ranging_request_margin_start"
        android:layout_marginTop="@dimen/activity_access_point_ranging_request_margin_top_divider"
        android:background="?android:attr/listDivider"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bssid" />

    <TextView
        android:id="@+id/range_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_access_point_ranging_request_margin_start"
        android:layout_marginTop="@dimen/activity_access_point_ranging_request_margin_top_divider"
        android:gravity="start"
        android:text="@string/range_label_activity_access_point_ranging_results"
        android:textAlignment="textStart"
        android:textSize="@dimen/activity_access_point_ranging_request_item_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider1" />

    <TextView
        android:id="@+id/range_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_access_point_ranging_request_margin_end"
        android:layout_marginTop="@dimen/activity_access_point_ranging_request_margin_top_divider"
        android:gravity="end"
        android:text="@string/activity_access_point_ranging_results_requesting_default"
        android:textAlignment="textEnd"
        android:textSize="@dimen/activity_access_point_ranging_request_item_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1" />

    <TextView
        android:id="@+id/range_mean_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_access_point_ranging_request_margin_start"
        android:layout_marginTop="@dimen/activity_access_point_ranging_request_margin_top"
        android:gravity="start"
        android:text="@string/range_mean_label_activity_access_point_ranging_results"
        android:textAlignment="textStart"
        android:textSize="@dimen/activity_access_point_ranging_request_item_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/range_label" />

    <TextView
        android:id="@+id/range_mean_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_access_point_ranging_request_margin_end"
        android:layout_marginTop="@dimen/activity_access_point_ranging_request_margin_top"
        android:gravity="end"
        android:text="@string/activity_access_point_ranging_results_requesting_default"
        android:textAlignment="textEnd"
        android:textSize="@dimen/activity_access_point_ranging_request_item_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/range_value" />

    <TextView
        android:id="@+id/range_sd_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_access_point_ranging_request_margin_start"
        android:layout_marginTop="@dimen/activity_access_point_ranging_request_margin_top"
        android:gravity="start"
        android:text="@string/range_sd_label_activity_access_point_ranging_results"
        android:textAlignment="textStart"
        android:textSize="@dimen/activity_access_point_ranging_request_item_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/range_mean_label" />

    <TextView
        android:id="@+id/range_sd_value"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_access_point_ranging_request_margin_end"
        android:layout_marginTop="@dimen/activity_access_point_ranging_request_margin_top"
        android:gravity="end"
        android:text="@string/activity_access_point_ranging_results_requesting_default"
        android:textAlignment="textEnd"
        android:textSize="@dimen/activity_access_point_ranging_request_item_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/range_mean_value" />

    <TextView
        android:id="@+id/range_sd_mean_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_access_point_ranging_request_margin_start"
        android:layout_marginTop="@dimen/activity_access_point_ranging_request_margin_top"
        android:gravity="start"
        android:text="@string/range_sd_mean_activity_access_point_ranging_results"
        android:textAlignment="textStart"
        android:textSize="@dimen/activity_access_point_ranging_request_item_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/range_sd_label" />

    <TextView
        android:id="@+id/range_sd_mean_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_access_point_ranging_request_margin_end"
        android:layout_marginTop="@dimen/activity_access_point_ranging_request_margin_top"
        android:gravity="end"
        android:text="@string/activity_access_point_ranging_results_requesting_default"
        android:textAlignment="textEnd"
        android:textSize="@dimen/activity_access_point_ranging_request_item_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/range_sd_value" />

    <TextView
        android:id="@+id/rssi_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_access_point_ranging_request_margin_start"
        android:layout_marginTop="@dimen/activity_access_point_ranging_request_margin_top"
        android:gravity="start"
        android:text="@string/rssi_label_activity_access_point_ranging_results"
        android:textAlignment="textStart"
        android:textSize="@dimen/activity_access_point_ranging_request_item_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/range_sd_mean_label" />

    <TextView
        android:id="@+id/rssi_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_access_point_ranging_request_margin_end"
        android:layout_marginTop="@dimen/activity_access_point_ranging_request_margin_top"
        android:gravity="end"
        android:text="@string/activity_access_point_ranging_results_requesting_default"
        android:textAlignment="textEnd"
        android:textSize="@dimen/activity_access_point_ranging_request_item_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/range_sd_mean_value" />

    <TextView
        android:id="@+id/successes_in_burst_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_access_point_ranging_request_margin_start"
        android:layout_marginTop="@dimen/activity_access_point_ranging_request_margin_top"
        android:gravity="start"
        android:text="@string/successes_in_burst_label_activity_access_point_ranging_results"
        android:textAlignment="textStart"
        android:textSize="@dimen/activity_access_point_ranging_request_item_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rssi_label" />

    <TextView
        android:id="@+id/successes_in_burst_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_access_point_ranging_request_margin_end"
        android:layout_marginTop="@dimen/activity_access_point_ranging_request_margin_top"
        android:gravity="end"
        android:text="@string/activity_access_point_ranging_results_requesting_default"
        android:textAlignment="textEnd"
        android:textSize="@dimen/activity_access_point_ranging_request_item_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rssi_value" />

    <TextView
        android:id="@+id/success_ratio_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_access_point_ranging_request_margin_start"
        android:layout_marginTop="@dimen/activity_access_point_ranging_request_margin_top"
        android:gravity="start"
        android:text="@string/success_ratio_label_activity_access_point_ranging_results"
        android:textAlignment="textStart"
        android:textSize="@dimen/activity_access_point_ranging_request_item_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/successes_in_burst_label" />

    <TextView
        android:id="@+id/success_ratio_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_access_point_ranging_request_margin_end"
        android:layout_marginTop="@dimen/activity_access_point_ranging_request_margin_top"
        android:gravity="end"
        android:text="@string/activity_access_point_ranging_results_requesting_default"
        android:textAlignment="textEnd"
        android:textSize="@dimen/activity_access_point_ranging_request_item_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/successes_in_burst_value" />

    <TextView
        android:id="@+id/number_of_requests_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_access_point_ranging_request_margin_start"
        android:layout_marginTop="@dimen/activity_access_point_ranging_request_margin_top"
        android:gravity="start"
        android:text="@string/number_of_requests_label_activity_access_point_ranging_results"
        android:textAlignment="textStart"
        android:textSize="@dimen/activity_access_point_ranging_request_item_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/success_ratio_label" />

    <TextView
        android:id="@+id/number_of_requests_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_access_point_ranging_request_margin_end"
        android:layout_marginTop="@dimen/activity_access_point_ranging_request_margin_top"
        android:gravity="end"
        android:text="@string/activity_access_point_ranging_results_requesting_default"
        android:textAlignment="textEnd"
        android:textSize="@dimen/activity_access_point_ranging_request_item_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/success_ratio_value" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="@dimen/activity_access_point_ranging_request_divider_height"
        android:layout_marginStart="@dimen/activity_access_point_ranging_request_margin_start"
        android:layout_marginTop="@dimen/activity_access_point_ranging_request_margin_top_divider"
        android:layout_marginEnd="@dimen/activity_access_point_ranging_request_margin_end"
        android:background="?android:attr/listDivider"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_of_requests_value" />

    <TextView
        android:id="@+id/stats_window_size_label"
        android:layout_width="0dp"
        android:layout_height="@dimen/activity_access_point_ranging_request_edit_view_height"
        android:layout_marginStart="@dimen/activity_access_point_ranging_request_margin_start"
        android:layout_marginTop="@dimen/activity_access_point_ranging_request_margin_top_divider"
        android:gravity="start"
        android:text="@string/stats_window_size_label_activity_access_point_ranging_results"
        android:textAlignment="textStart"
        android:textSize="@dimen/activity_access_point_ranging_request_item_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider2" />

    <EditText
        android:id="@+id/stats_window_size_edit_value"
        android:layout_width="@dimen/activity_access_point_ranging_request_edit_view_width"
        android:layout_height="@dimen/activity_access_point_ranging_request_edit_view_height"
        android:layout_marginEnd="@dimen/activity_access_point_ranging_request_margin_end"
        android:layout_marginTop="@dimen/activity_access_point_ranging_request_margin_top_divider"
        android:ems="10"
        android:singleLine="true"
        android:inputType="number"
        android:textAlignment="textEnd"
        android:textSize="@dimen/activity_access_point_ranging_request_item_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider2"
        tools:text="50" />

    <TextView
        android:id="@+id/ranging_period_label"
        android:layout_width="0dp"
        android:layout_height="@dimen/activity_access_point_ranging_request_edit_view_height"
        android:layout_marginStart="@dimen/activity_access_point_ranging_request_margin_start"
        android:layout_marginTop="@dimen/activity_access_point_ranging_request_margin_top"
        android:gravity="start"
        android:text="@string/ranging_period_label_activity_access_point_ranging_results"
        android:textAlignment="textStart"
        android:textSize="@dimen/activity_access_point_ranging_request_item_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stats_window_size_label" />

    <EditText
        android:id="@+id/ranging_period_edit_value"
        android:layout_width="@dimen/activity_access_point_ranging_request_edit_view_width"
        android:layout_height="@dimen/activity_access_point_ranging_request_edit_view_height"
        android:layout_marginEnd="@dimen/activity_access_point_ranging_request_margin_end"
        android:layout_marginTop="@dimen/activity_access_point_ranging_request_margin_top"
        android:ems="10"
        android:singleLine="true"
        android:inputType="number"
        android:textAlignment="textEnd"
        android:textSize="@dimen/activity_access_point_ranging_request_item_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stats_window_size_edit_value"
        tools:text="1000" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="@dimen/activity_access_point_ranging_request_margin_end"
        android:layout_marginStart="@dimen/activity_access_point_ranging_request_margin_start"
        android:onClick="onResetButtonClick"
        android:text="@string/reset_label_activity_access_point_ranging_results"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
